--- a/css/app.css
+++ b/css/app.css
@@ -170,6 +170,15 @@ body {
     height: 100%;
 }
 
+.door-riddle_column {
+    flex-direction: column;
+    justify-content: flex-end;
+}
+
+.door-riddle_50percent {
+    height: 50%;
+}
+
 .door-riddle__button {
     width: 64px;
     height: 64px;
@@ -188,6 +197,8 @@ body {
 .door-riddle__button_pressed {
     background-color: #F3E5D9;
 }
+
+/* NOTE chains for door1 */
 
 .chain-riddle {
     position: relative;
@@ -217,4 +228,65 @@ body {
 
 .chain_pressed {
     transition: min-height linear;
+}
+
+/* NOTE lock for door2 */
+
+.lock-riddle {
+    width: 230px;
+    height: 230px;
+    border-radius: 50%;
+    background-color: #000000;
+    border: 1px solid #F3E9E0;
+}
+
+.lock-riddle__shield {
+    width: 100%;
+    height: 100%;
+    border-radius: 50%;
+    background-color: #4679BD;
+    box-shadow: 0 0 3px gray;
+    border:10px solid #CFDCEC;
+    box-sizing: border-box;
+    position: relative;
+}
+
+.lock-riddle__shield:before, .lock-riddle__shield:after {
+    content: "";
+    width: 100px;
+    height: 40px;
+    background-color: #969696;
+    position: absolute;
+}
+
+.lock-riddle__shield:before {
+    left: -50%;
+    top: 50%;
+    transform: translate(50%, -50%);
+    box-shadow: inset -1px 1px 4px rgba(0,0,0,0.6);
+}
+
+.lock-riddle__shield:after {
+    right: -50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+    box-shadow: inset 1px 1px 4px rgba(0,0,0,0.6);
+}
+
+.lock {
+    width: 128px;
+    height: 128px;
+}
+
+.lock_yellow {
+    background: url(../img/lockYellow.png) center center no-repeat;
+}
+
+.key {
+    width: 90px;
+    height: 80px;
+}
+
+.key_yellow {
+    background: url(../img/keyYellow.png) center center no-repeat;
 }
